[tool.poetry]
name = "uuid-master"
version = "0.1.0"
description = "UUID Master API voor Integration Project (EhB)"
authors = ["Jochen Van de Velde <jochen.van.de.velde@student.ehb.be>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
sqlalchemy = "^1.3.16"
apispec = "^3.3.0"
marshmallow = "^3.5.1"
decouple = "^0.0.7"
marshmallow_sqlalchemy = "^0.22.3"
Flask-SQLAlchemy = "^2.4.1"
flask-apispec = "^0.8.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"